@@ -1,5 +1,12 @@
 2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (completion--merge-suffix): New function.
+	(completion-basic-try-completion): Use it.
+	(completion-pcm--find-all-completions): Add argument `filter'.
+	(completion-pcm--filename-try-filter, completion-pcm--merge-try):
+	New functions.
+	(completion-pcm-try-completion): Use them.
+
 	* xt-mouse.el (turn-on-xterm-mouse-tracking, turn-off-xterm-mouse-tracking):
 	Use terminal-list.
 
